Implemented load more button Added app icons Minor bugfixes

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -25,6 +25,10 @@
         text-overflow: initial;
         white-space: initial;
     }
+
+    .video-grid h2 {
+        font-size: 16px;
+    }
 }
 
 ion-nav > ion-page > ion-header > .youtube-player-header.toolbar.statusbar-padding:first-child {
